// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "space-between",
        "marginHorizontal": 20,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 30,
          "fontWeight": "600",
          "paddingBottom": 10,
          "paddingTop": 20,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderRadius": 15,
          "justifyContent": "space-between",
          "marginBottom": 10,
          "minHeight": 120,
          "paddingBottom": 10,
          "paddingHorizontal": 15,
          "paddingTop": 20,
          "shadowColor": "black",
          "shadowOpacity": 0.15,
          "width": 300,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "opacity": 0.5,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#efefef",
                "borderRadius": 4.5,
                "height": 18,
                "width": "100%",
              }
            }
          />
        </View>
        <View>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#efefef",
                "borderRadius": 4.5,
                "height": 18,
                "width": "80%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 30,
          "fontWeight": "600",
          "paddingBottom": 10,
          "paddingTop": 20,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    -/-
  </Text>
</View>
`;

exports[`renders question 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "space-between",
        "marginHorizontal": 20,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 30,
          "fontWeight": "600",
          "paddingBottom": 10,
          "paddingTop": 20,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    category
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderRadius": 15,
          "justifyContent": "space-between",
          "marginBottom": 10,
          "minHeight": 120,
          "paddingBottom": 10,
          "paddingHorizontal": 15,
          "paddingTop": 20,
          "shadowColor": "black",
          "shadowOpacity": 0.15,
          "width": 300,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#454544",
            "fontSize": 18,
            "paddingBottom": 10,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      question
    </Text>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 72,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View
        color="#454544"
        onPress={[Function]}
        style={
          Array [
            Object {
              "borderColor": "#454544",
              "borderRadius": 30,
              "borderWidth": 2,
              "marginHorizontal": 10,
              "marginVertical": 10,
              "paddingVertical": 5,
              "width": 120,
            },
            undefined,
          ]
        }
        title="True"
      >
        <View
          accessibilityComponentType="button"
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={undefined}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "padding": 8,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#454544",
                  },
                ]
              }
            >
              True
            </Text>
          </View>
        </View>
      </View>
      <View
        color="#454544"
        onPress={[Function]}
        style={
          Array [
            Object {
              "borderColor": "#454544",
              "borderRadius": 30,
              "borderWidth": 2,
              "marginHorizontal": 10,
              "marginVertical": 10,
              "paddingVertical": 5,
              "width": 120,
            },
            undefined,
          ]
        }
        title="False"
      >
        <View
          accessibilityComponentType="button"
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={undefined}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "padding": 8,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#454544",
                  },
                ]
              }
            >
              False
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 30,
          "fontWeight": "600",
          "paddingBottom": 10,
          "paddingTop": 20,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    1 / 1
  </Text>
</View>
`;
